[package]
name = "kiwi-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive", "env"] }
context-server.workspace = true
context-server-utils = { git = "https://github.com/fdionisi/context-server", version = "0.1" }
futures = "0.3"
http-client.workspace = true
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
indoc.workspace = true
kiwi_mcp_tools = { path = "crates/kiwi_mcp_tools" }
log.workspace = true
parking_lot = "0.12"
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "3"
members = ["crates/kiwi_mcp_tools"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
context-server = { git = "https://github.com/fdionisi/context-server", version = "0.8" }
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.4" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
indoc = "2"
log = "0.4"
serde_json = "1"
